@@ -8,6 +8,10 @@ Changes - Apache::Test change logfile
 
 =item 1.06-dev
 
+added -timeout and $ENV{APACHE_TEST_START_TIMEOUT} as places
+to specify the maximum number of seconds to wait for the test
+server to start.  the default is still 60 seconds.  [Geoffrey Young]
+
 use apxs PREFIX to resolve relative httpd.conf directives
 ServerRoot is not present [Mike Cramer]
 
